Fixed overlap between offer icons and wide images

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -89,8 +89,8 @@ body {
    > main {
 
       .offer {
-         $icon_diameter: 1.3rem;
-         $icon_offset: 1rem;
+         $icon_diameter: 1.2em;
+         $icon_offset: 0.4rem;
 
          text-align: left;
          border: 1px solid #bfbfbf;
@@ -126,7 +126,7 @@ body {
                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
                color: #fff;
                font-weight: bold;
-               font-size: 0.9rem;
+               font-size: 1rem;
                background: #bfbfbf;
                width: $icon_diameter;
                height: $icon_diameter;
@@ -149,7 +149,7 @@ body {
             align-items: center;
 
             .offer-image {
-               max-width: 100%;
+               max-width: 80%;
                max-height: 100%;
             }
          }
